# obsidian-ical

./: pyproject.toml  read.py
