[tool.poetry]
name = "obsidian-ical"
version = "0.1.0"
description = ""
authors = ["Josh Yudaken"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
icalendar = "^5.0.11"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
